研究内容、研究成果、メンバーを元のものに合わせた

--- a/src/pages/study.mdx
+++ b/src/pages/study.mdx
@@ -4,6 +4,8 @@ path: /study
 title: 研究内容
 ---
 
+import Image from "../components/Image.astro";
+
 ## 3Dプリンタと転写箔を用いた多層基板の製作手法
 
 ### Single-sided Multi-layer Electric Circuit by Hot Stamping with 3D Printer
@@ -22,7 +24,7 @@ _今井， 2021_
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerpolicy="strict-origin-when-cross-origin"
   allowfullscreen=""
-  style="width: 100%; aspect-ratio: 16/9;"
+  style="width: 90%; margin: 0 auto; aspect-ratio: 16/9;"
 ></iframe>
 
 ---
@@ -46,7 +48,7 @@ _ワーユ， 2021_
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
   referrerpolicy="strict-origin-when-cross-origin"
   allowfullscreen=""
-  style="width: 100%; aspect-ratio: 16/9;"
+  style="width: 90%; margin: 0 auto; aspect-ratio: 16/9;"
 ></iframe>
 
 ---
@@ -65,8 +67,11 @@ _岩井， 2020_
 > Hiroyuki Manabe, Yuki Iwai, “Backhand Display: A Wearable Device for the Back of the Hand,” Companion Proc. Conf. on Interactive Surfaces and Spaces (ISS ’20), pp. 41-45, 2020.
 > [https://dl.acm.org/doi/10.1145/3380867.3426200](https://dl.acm.org/doi/10.1145/3380867.3426200)
 
-![Backhand displayのプロトタイプ](/study/backhand_display.webp)
-Backhand displayのプロトタイプ
+<Image
+  src="/study/backhand_display.webp"
+  caption="Backhand displayのプロトタイプ"
+  width="90%"
+/>
 
 ---
 
@@ -79,8 +84,16 @@ Backhand displayのプロトタイプ
 > Mengting Huang, Kazuyuki Fujita, Kazuki Takashima, Taichi Tsuchida, Hiroyuki Manabe, Yoshifumi Kitamura, “ShearSheet: Low-Cost Shear Force Input with Elastic Feedback for Augmenting Touch Interaction,” Proc. Int. Conf. Interactive Surfaces and Spaces (ISS ’19), pp. 77-87, 2019.
 > [https://doi.org/10.1145/3343055.3359717](https://doi.org/10.1145/3343055.3359717)
 
-<iframe loading="lazy" title="ShearSheet: Low-Cost Shear Force Input with Elastic Feedback for Augmenting Touch Interaction"  src="https://www.youtube.com/embed/feYEDAu0h5M?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="" 
-  style="width: 100%; aspect-ratio: 16/9;"></iframe>
+<iframe
+  loading="lazy"
+  title="ShearSheet: Low-Cost Shear Force Input with Elastic Feedback for Augmenting Touch Interaction"
+  src="https://www.youtube.com/embed/feYEDAu0h5M?feature=oembed"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allowfullscreen=""
+  style="width: 90%; margin: 0 auto; aspect-ratio: 16/9;"
+></iframe>
 
 ---
 
@@ -93,5 +106,4 @@ FDM 方式の3D プリンタ, 金属転写箔, ボールキャスタを用いて
 > Yuhei Imai, Kunihiro Kato, Norihisa Segawa, Hiroyuki Manabe, “Hot Stamping of Electric Circuits by 3D Printer”, Adjunct Proc. Symp. User Interface Software and Technology (UIST ’19), pp. 128-130, 2019.
 > [https://doi.org/10.1145/3332167.3356895](https://doi.org/10.1145/3332167.3356895)
 
-![セットアップした状態](/study/imai2019.webp)
-セットアップした状態
+<Image src="/study/imai2019.webp" caption="セットアップした状態" width="90%" />
