chi2024にhero imageを適用

--- a/src/content/reports/chi2024.mdx
+++ b/src/content/reports/chi2024.mdx
@@ -3,6 +3,7 @@ title: "CHI2024にてデモ発表を行いました（M1 櫻井・M1 武田）"
 description: "2024年5月11日から5月16日にアメリカのハワイ州オアフ島にあるHawai`i Convention Centerで開催されたCHI2024に，M1の櫻井瑛一朗と武田和大，B4の上樂大治朗が参加しました．"
 pubDate: "2024-06-07T12:00:00.000Z"
 tags: ["学会発表", "学生報告", "研究成果"]
+heroImage: "http://pai.ise.shibaura-it.ac.jp/wp-content/uploads/2024/06/PXL_20240514_033633856-2.jpg"
 ---
 
 import ImageTile from "../../components/ImageTile.astro";
