真鍋先生の名前に下線

--- a/src/pages/profile/research.mdx
+++ b/src/pages/profile/research.mdx
@@ -10,8 +10,8 @@ import ProfileResearch from "../../components/Profile/ProfileResearch.astro";
   <ProfileResearch youtubeId="0Biw8adTIZo">
     ### AR/VR向け文字入力手法 / Text input method for AR/VR
 
-    - Wahyu Hutama, Hikari Harashima, Hironori Ishikawa, Hiroyuki Manabe, "HMK: Head-Mounted-Keyboard for Text Inputin Virtual or Augmented Reality," Adjunct Proc. UIST '21, pp. 115-117, 2021.[link](https://dl.acm.org/doi/10.1145/3474349.3480195)
-    - Wahyu Hutama, 原島 輝, 石川 博規, 真鍋 宏幸, "HMK: VR/ARテキスト入力用ヘッドマウントキーボード," 情報処理学会研究会報告 2022-HCI-197, pp. 1-5, 2022. [link](http://id.nii.ac.jp/1001/00217313/)
+    - Wahyu Hutama, Hikari Harashima, Hironori Ishikawa, <span class="mnb">Hiroyuki Manabe</span>, "HMK: Head-Mounted-Keyboard for Text Inputin Virtual or Augmented Reality," Adjunct Proc. UIST '21, pp. 115-117, 2021.[link](https://dl.acm.org/doi/10.1145/3474349.3480195)
+    - Wahyu Hutama, 原島 輝, 石川 博規, <span class="mnb">真鍋 宏幸</span>, "HMK: VR/ARテキスト入力用ヘッドマウントキーボード," 情報処理学会研究会報告 2022-HCI-197, pp. 1-5, 2022. [link](http://id.nii.ac.jp/1001/00217313/)
     - Youtube（動画）[link](https://youtu.be/0Biw8adTIZo)
 
   </ProfileResearch>
@@ -19,28 +19,28 @@ import ProfileResearch from "../../components/Profile/ProfileResearch.astro";
   <ProfileResearch youtubeId="8zmFLT_XwHQ">
   ### 3Dプリンタを用いた電子回路作成手法 / Electric circuit by 3D printer
 
-    - 今井 悠平, 真鍋 宏幸, "3Dプリンタと転写箔を用いた電子配線印刷手法," 日本バーチャルリアリティ学会論文誌, Vol. 26, No. 4, pp. 241-253, 2021. [link](https://doi.org/10.18974/tvrsj.26.4_241)
-    - Yuhei Imai, Hiroyuki Manabe, "Single-sided Multi-layer Electric Circuit by Hot Stamping with 3D Printer," Adjunct Proc. UIST '21, pp. 126-128, 2021.[link](https://dl.acm.org/doi/10.1145/3474349.3480200)
-    - Yuhei Imai, Kunihiro Kato, Norihisa Segawa, Hiroyuki Manabe, "Hot Stamping of Electric Circuits by 3D Printer," Adjunct Proc. UIST '19, pp. 128-130, 2019.[link](https://doi.org/10.1145/3332167.3356895)
+    - 今井 悠平, <span class="mnb">真鍋 宏幸</span>, "3Dプリンタと転写箔を用いた電子配線印刷手法," 日本バーチャルリアリティ学会論文誌, Vol. 26, No. 4, pp. 241-253, 2021. [link](https://doi.org/10.18974/tvrsj.26.4_241)
+    - Yuhei Imai, <span class="mnb">Hiroyuki Manabe</span>, "Single-sided Multi-layer Electric Circuit by Hot Stamping with 3D Printer," Adjunct Proc. UIST '21, pp. 126-128, 2021.[link](https://dl.acm.org/doi/10.1145/3474349.3480200)
+    - Yuhei Imai, Kunihiro Kato, Norihisa Segawa, <span class="mnb">Hiroyuki Manabe</span>, "Hot Stamping of Electric Circuits by 3D Printer," Adjunct Proc. UIST '19, pp. 128-130, 2019.[link](https://doi.org/10.1145/3332167.3356895)
     - [動画（movie）](http://pai.ise.shibaura-it.ac.jp/images/HotStampingVideo.mp4), Youtube（動画）[link](https://youtu.be/8zmFLT_XwHQ)
-    - 今井 悠平, 加藤 邦拓, 瀬川 典久, 真鍋 宏幸, "3Dプリンタと転写箔を用いた両面基板の製作手法," インタラクション2020論文集, pp. 655-657, 2020.[link](https://www.interaction-ipsj.org/proceedings/2020/data/bib/2B-46.html)
+    - 今井 悠平, 加藤 邦拓, 瀬川 典久, <span class="mnb">真鍋 宏幸</span>, "3Dプリンタと転写箔を用いた両面基板の製作手法," インタラクション2020論文集, pp. 655-657, 2020.[link](https://www.interaction-ipsj.org/proceedings/2020/data/bib/2B-46.html)
 
   </ProfileResearch>
 
   <ProfileResearch youtubeId="cNO3yolbL3o">
     ### 金箔を用いた電子回路作成手法 / Paper electronics using metal leaf
 
-    - Norihisa Segawa, Kunihiro Kato, Hiroyuki Manabe, "Rapid Prototyping of Paper Electronics Using a Metal Leaf and Laser Printer," Adjunct Proc. Symp. User Interface Software and Technology (UIST '19), pp. 99-101, 2019.[link](https://doi.org/10.1145/3332167.3356885)
+    - Norihisa Segawa, Kunihiro Kato, <span class="mnb">Hiroyuki Manabe</span>, "Rapid Prototyping of Paper Electronics Using a Metal Leaf and Laser Printer," Adjunct Proc. Symp. User Interface Software and Technology (UIST '19), pp. 99-101, 2019.[link](https://doi.org/10.1145/3332167.3356885)
     - Youtube（動画）[link](https://youtu.be/cNO3yolbL3o)
     - ITmedia NEWS　2020年1月7日 [link](https://www.itmedia.co.jp/news/articles/2001/07/news066.html)
-    - 加藤 邦拓, 真鍋 宏幸, 川原 圭博, 瀬川 典久, "Leaf Circuits: 金属箔とレーザプリンタを用いた回路作成の応用と評価," インタラクション2020論文集, pp. 96-105, 2020.[link](https://www.interaction-ipsj.org/proceedings/2020/data/bib/INT20011.html)
+    - 加藤 邦拓, <span class="mnb">真鍋 宏幸</span>, 川原 圭博, 瀬川 典久, "Leaf Circuits: 金属箔とレーザプリンタを用いた回路作成の応用と評価," インタラクション2020論文集, pp. 96-105, 2020.[link](https://www.interaction-ipsj.org/proceedings/2020/data/bib/INT20011.html)
 
   </ProfileResearch>
 
   <ProfileResearch youtubeId="Omyooinhjo0">
     ### AR/VRを切り替えられるHMD / HMD for AR and VR
 
-    - Wataru Yamada, Hiroyuki Manabe, Daizo Ikeda, Jun Rekimoto, "VARiable HMD: Optical See-Through HMD for AR and VR," Adjunct Proc. Symp. User Interface Software and Technology (UIST '19), pp. 131-133, 2019.[link](https://doi.org/10.1145/3332167.3356896)
+    - Wataru Yamada, <span class="mnb">Hiroyuki Manabe</span>, Daizo Ikeda, Jun Rekimoto, "VARiable HMD: Optical See-Through HMD for AR and VR," Adjunct Proc. Symp. User Interface Software and Technology (UIST '19), pp. 131-133, 2019.[link](https://doi.org/10.1145/3332167.3356896)
     - Youtube（動画）[link](https://youtu.be/Omyooinhjo0)
 
   </ProfileResearch>
@@ -48,7 +48,7 @@ import ProfileResearch from "../../components/Profile/ProfileResearch.astro";
   <ProfileResearch youtubeId="0U64M-C7kro">
     ### 被写界深度の深いシースルーHMD / Optical see-through HMD with deep depth of field
 
-    - Yuki Katsumata, Wataru Yamada, Hiroyuki Manabe, "Optical See-Through Head-Mounted Display with Deep Depth of Field Using Pinhole Polarizing Plates," Adjunct Proc. Symp. User Interface Software and Technology (UIST '19), pp. 102-104, 2019.[link](https://doi.org/10.1145/3332167.3356886)
+    - Yuki Katsumata, Wataru Yamada, <span class="mnb">Hiroyuki Manabe</span>, "Optical See-Through Head-Mounted Display with Deep Depth of Field Using Pinhole Polarizing Plates," Adjunct Proc. Symp. User Interface Software and Technology (UIST '19), pp. 102-104, 2019.[link](https://doi.org/10.1145/3332167.3356886)
     - Youtube（動画）[link](https://youtu.be/0U64M-C7kro)
 
   </ProfileResearch>
@@ -56,7 +56,7 @@ import ProfileResearch from "../../components/Profile/ProfileResearch.astro";
   <ProfileResearch youtubeId="88UpCRaAJQ0">
     ### 羽根のないドローン / Drone without propellers
 
-    - Wataru Yamada, Hiroyuki Manabe, Daizo Ikeda, "ZeRONE: Safety Drones with Blade-free Propulsion," Proc. CHI Conference on Human Factors in Computing Systems (CHI ’19), Paper No. 365, 2019.[link](https://doi.org/10.1145/3290605.3300595)
+    - Wataru Yamada, <span class="mnb">Hiroyuki Manabe</span>, Daizo Ikeda, "ZeRONE: Safety Drones with Blade-free Propulsion," Proc. CHI Conference on Human Factors in Computing Systems (CHI ’19), Paper No. 365, 2019.[link](https://doi.org/10.1145/3290605.3300595)
     - NTTドコモ報道発表資料 2019年4月17日（動画あり）[link](https://www.nttdocomo.co.jp/info/news_release/2019/04/17_01.html)
 
   </ProfileResearch>
@@ -64,8 +64,8 @@ import ProfileResearch from "../../components/Profile/ProfileResearch.astro";
   <ProfileResearch youtubeId="Q63O5pOFXKA">
     ### 広視野角HMD / Wide field-of-view HMD
 
-    - Wataru Yamada, Hiroyuki Manabe, "Expanding the Field-of-View of Head-Mounted Displays with Peripheral Blurred Images," Adjunct Proc. Symp. User Interface Software and Technology (UIST '16), pp. 141-142, 2016.[link](https://doi.org/10.1145/2984751.2985735)
-    - 山田 渉, 真鍋 宏幸, "視野特性を考慮したヘッドマウントディスプレイの広視野角化手法," NTT DOCOMO テクニカル・ジャーナル, Vol. 25, No. 1, pp. 30-34, 2017.[pdf](https://www.nttdocomo.co.jp/binary/pdf/corporate/technology/rd/technical_journal/bn/vol25_1/vol25_1_005jp.pdf)
+    - Wataru Yamada, <span class="mnb">Hiroyuki Manabe</span>, "Expanding the Field-of-View of Head-Mounted Displays with Peripheral Blurred Images," Adjunct Proc. Symp. User Interface Software and Technology (UIST '16), pp. 141-142, 2016.[link](https://doi.org/10.1145/2984751.2985735)
+    - 山田 渉, <span class="mnb">真鍋 宏幸</span>, "視野特性を考慮したヘッドマウントディスプレイの広視野角化手法," NTT DOCOMO テクニカル・ジャーナル, Vol. 25, No. 1, pp. 30-34, 2017.[pdf](https://www.nttdocomo.co.jp/binary/pdf/corporate/technology/rd/technical_journal/bn/vol25_1/vol25_1_005jp.pdf)
     - NTTドコモ報道発表資料 2019年4月17日（動画あり）[link](https://www.nttdocomo.co.jp/info/news_release/2019/04/17_00.html)
 
   </ProfileResearch>
@@ -73,9 +73,9 @@ import ProfileResearch from "../../components/Profile/ProfileResearch.astro";
   <ProfileResearch youtubeId="feYEDAu0h5M">
     ### スマートフォンにおける円滑な入力モード切替 / Shear force input for smartphones
 
-    - 藤田 和之, 黄 梦婷, 高嶋 和毅, 土田 太一, 真鍋 宏幸, 北村 喜文, "ShearSheet：静電容量タッチパネルに装着可能な透明シートを用いた剪断入力インタフェース," 情報処理学会論文誌, Vol. 62, No. 2, pp. 641-653, 2021. [link](http://doi.org/10.20729/00209337)
-    - Mengting Huang, 藤田 和之, 高嶋 和毅, 真鍋 宏幸, 北村 喜文, "タッチスクリーン上に重ねた透明シートを利用した位置と速度制御の併用が可能なユーザインタフェース," インタラクション2019, 2019. [pdf](http://www.interaction-ipsj.org/proceedings/2019/data/pdf/1B-25.pdf)
-    - Mengting Huang, Kazuyuki Fujita, Kazuki Takashima, Taichi Tsuchida, Hiroyuki Manabe, Yoshifumi Kitamura, "ShearSheet: Low-Cost Shear Force Input with Elastic Feedback for Augmenting Touch Interaction," Proc. Int. Conf. Interactive Surfaces and Spaces (ISS '19), pp. 77-87, 2019. [link](https://doi.org/10.1145/3343055.3359717) （リンク先のsource materialsに動画あり）
+    - 藤田 和之, 黄 梦婷, 高嶋 和毅, 土田 太一, <span class="mnb">真鍋 宏幸</span>, 北村 喜文, "ShearSheet：静電容量タッチパネルに装着可能な透明シートを用いた剪断入力インタフェース," 情報処理学会論文誌, Vol. 62, No. 2, pp. 641-653, 2021. [link](http://doi.org/10.20729/00209337)
+    - Mengting Huang, 藤田 和之, 高嶋 和毅, <span class="mnb">真鍋 宏幸</span>, 北村 喜文, "タッチスクリーン上に重ねた透明シートを利用した位置と速度制御の併用が可能なユーザインタフェース," インタラクション2019, 2019. [pdf](http://www.interaction-ipsj.org/proceedings/2019/data/pdf/1B-25.pdf)
+    - Mengting Huang, Kazuyuki Fujita, Kazuki Takashima, Taichi Tsuchida, <span class="mnb">Hiroyuki Manabe</span>, Yoshifumi Kitamura, "ShearSheet: Low-Cost Shear Force Input with Elastic Feedback for Augmenting Touch Interaction," Proc. Int. Conf. Interactive Surfaces and Spaces (ISS '19), pp. 77-87, 2019. [link](https://doi.org/10.1145/3343055.3359717) （リンク先のsource materialsに動画あり）
     - ITmedia NEWS　2019年11月27日 [link](https://www.itmedia.co.jp/news/articles/1911/27/news042.html)
 
   </ProfileResearch>
@@ -83,8 +83,8 @@ import ProfileResearch from "../../components/Profile/ProfileResearch.astro";
   <ProfileResearch youtubeId="9k-OriPI6GY">
     ### ドローンを用いた自動歩行 / Automated walking by drone on helmet
 
-    - 高田 崚介, 礒本 俊弥, 山田 渉, 真鍋 宏幸, 志築 文太郎, "プロペラを用いた頭部装着型歩行牽引デバイス," インタラクション2019, 2019. [pdf](http://www.iplab.cs.tsukuba.ac.jp/paper/poster/rtakada_interaction2019a.pdf)
-    - 高田 崚介, 山田 渉, 真鍋 宏幸, 志築 文太郎, "ドローンを用いたウェアラブルな歩行牽引デバイスの構築," 情報処理学会研究会報告 HCI176, 2018. [link](http://id.nii.ac.jp/1001/00185336/)
+    - 高田 崚介, 礒本 俊弥, 山田 渉, <span class="mnb">真鍋 宏幸</span>, 志築 文太郎, "プロペラを用いた頭部装着型歩行牽引デバイス," インタラクション2019, 2019. [pdf](http://www.iplab.cs.tsukuba.ac.jp/paper/poster/rtakada_interaction2019a.pdf)
+    - 高田 崚介, 山田 渉, <span class="mnb">真鍋 宏幸</span>, 志築 文太郎, "ドローンを用いたウェアラブルな歩行牽引デバイスの構築," 情報処理学会研究会報告 HCI176, 2018. [link](http://id.nii.ac.jp/1001/00185336/)
     - テレビ東京 WBS トレたま 2019年1月15日放送 [link](https://txbiz.tv-tokyo.co.jp/wbs/trend_tamago/post_169770/)
 
   </ProfileResearch>
@@ -92,28 +92,28 @@ import ProfileResearch from "../../components/Profile/ProfileResearch.astro";
   <ProfileResearch youtubeId="UGdhIaIE_os">
     ### スマートフォンのカメラを用いたポインティングスティック / Pointing stick using smartphone camera
 
-    - Wataru Yamada, Hiroyuki Manabe, Daizo Ikeda, "CamTrackPoint: Camera-Based Pointing Stick Using Transmitted Light through Finger," Proc. Symp. User Interface Software and Technology (UIST '18), pp. 313-320, 2018. [link](https://doi.org/10.1145/3242587.3242641)
+    - Wataru Yamada, <span class="mnb">Hiroyuki Manabe</span>, Daizo Ikeda, "CamTrackPoint: Camera-Based Pointing Stick Using Transmitted Light through Finger," Proc. Symp. User Interface Software and Technology (UIST '18), pp. 313-320, 2018. [link](https://doi.org/10.1145/3242587.3242641)
 
   </ProfileResearch>
 
   <ProfileResearch youtubeId="wdco0AAHYDc">
     ### FTIRを用いたスマートフォンのタッチ領域拡張 / Additional touch pad for smartphone based on FTIR
 
-    - Takuya Kitade, Wataru Yamada, Hiroyuki Manabe, "FTIR-based Touch Pad for Smartphone-based HMD Enhancement," Adjunct Proc. Symp. User Interface Software and Technology (UIST '18), pp. 174-175, 2018. [link](https://doi.org/10.1145/3266037.3271641)
+    - Takuya Kitade, Wataru Yamada, <span class="mnb">Hiroyuki Manabe</span>, "FTIR-based Touch Pad for Smartphone-based HMD Enhancement," Adjunct Proc. Symp. User Interface Software and Technology (UIST '18), pp. 174-175, 2018. [link](https://doi.org/10.1145/3266037.3271641)
 
   </ProfileResearch>
 
   <ProfileResearch youtubeId="iSt0Vn18OOw">
     ### 装着者の表情が見えるHMD / Transparent HMD
 
-    - Mariko Chiba, Wataru Yamada, Hiroyuki Manabe, "Transparent Mask: Face-Capturing Head-Mounted Display with IR Pass Filters," Adjunct Proc. Symp. User Interface Software and Technology (UIST '18), pp. 149-151, 2018. [link](https://doi.org/10.1145/3266037.3271632)
+    - Mariko Chiba, Wataru Yamada, <span class="mnb">Hiroyuki Manabe</span>, "Transparent Mask: Face-Capturing Head-Mounted Display with IR Pass Filters," Adjunct Proc. Symp. User Interface Software and Technology (UIST '18), pp. 149-151, 2018. [link](https://doi.org/10.1145/3266037.3271632)
 
   </ProfileResearch>
 
   <ProfileResearch youtubeId="NT-UCv5B1es">
     ### 浮遊球体ドローンディスプレイ / Spherical Drone Display
 
-    - Wataru Yamada, Kazuhiro Yamada, Hiroyuki Manabe, Daizo Ikeda, "iSphere: Self-Luminous Spherical Drone Display," Proc. Symp. User Interface Software and Technology (UIST '17), pp. 635-643, 2017. [link](https://doi.org/10.1145/3126594.3126631)
+    - Wataru Yamada, Kazuhiro Yamada, <span class="mnb">Hiroyuki Manabe</span>, Daizo Ikeda, "iSphere: Self-Luminous Spherical Drone Display," Proc. Symp. User Interface Software and Technology (UIST '17), pp. 635-643, 2017. [link](https://doi.org/10.1145/3126594.3126631)
     - NTTドコモ報道発表資料 2017年4月17日 [link](https://www.nttdocomo.co.jp/info/news_release/2017/04/17_00.html)
     - テレビ東京 WBS トレたま 2017年4月19日放送 [link](https://txbiz.tv-tokyo.co.jp/wbs/trend_tamago/post_130537/)
     - 世界初、「高解像度版浮遊球体ドローンディスプレイ」を開発（Youtube） [link](https://www.youtube.com/watch?v=NT-UCv5B1es)
@@ -123,8 +123,8 @@ import ProfileResearch from "../../components/Profile/ProfileResearch.astro";
   <ProfileResearch youtubeId="0ILzlIZiamE">
     ### 直列に接続したタッチセンサ / Touch sensing with series-connected electrodes
 
-    - 真鍋 宏幸, 山田 渉, "直列に接続した電極を用いたタッチ検出手法," 情報処理学会論文誌, Vol. 60, No. 2, pp. 272-285, 2019. [link](http://id.nii.ac.jp/1001/00194260/)
-    - Hiroyuki Manabe, Wataru Yamada, "A Capacitive Touch Sensing Technique with Series-connected Sensing Electrodes," Proc. Symp. User Interface Software and Technology (UIST '17), pp. 645-654, 2017. [link](https://doi.org/10.1145/3126594.3126625)
+    - <span class="mnb">真鍋 宏幸</span>, 山田 渉, "直列に接続した電極を用いたタッチ検出手法," 情報処理学会論文誌, Vol. 60, No. 2, pp. 272-285, 2019. [link](http://id.nii.ac.jp/1001/00194260/)
+    - <span class="mnb">Hiroyuki Manabe</span>, Wataru Yamada, "A Capacitive Touch Sensing Technique with Series-connected Sensing Electrodes," Proc. Symp. User Interface Software and Technology (UIST '17), pp. 645-654, 2017. [link](https://doi.org/10.1145/3126594.3126625)
 
   </ProfileResearch>
 
@@ -133,7 +133,7 @@ import GazeTrackingHMD from "../../assets/profile/GazeTrackingHMD.jpg";
   <ProfileResearch imgSrc={GazeTrackingHMD.src}>
     ### スマートフォンを用いたHMDにおける視線検出 / Eye tracking in HMD using smartphone front camera
 
-    - Hiroyuki Hakoda, Wataru Yamada, Hiroyuki Manabe, "Eye Tracking Using Built-in Camera for Smartphone-based HMD," Adjunct Proc. Symp. User Interface Software and Technology (UIST '17), pp. 15-16, 2017. [link](https://doi.org/10.1145/3131785.3131809)
+    - Hiroyuki Hakoda, Wataru Yamada, <span class="mnb">Hiroyuki Manabe</span>, "Eye Tracking Using Built-in Camera for Smartphone-based HMD," Adjunct Proc. Symp. User Interface Software and Technology (UIST '17), pp. 15-16, 2017. [link](https://doi.org/10.1145/3131785.3131809)
 
   </ProfileResearch>
 
@@ -142,8 +142,8 @@ import DepthCamTag from "../../assets/profile/DepthCamTag.jpg";
   <ProfileResearch imgSrc={DepthCamTag.src}>
     ### デプスカメラで読む小型タグ / Tiny tag that depth camera reads
 
-    - 真鍋 宏幸, 山田 渉, 稲村 浩, "ToF方式のデプスカメラで読み取る小型で低消費電力なタグ," 情報処理学会論文誌, Vol. 58, No. 10, pp. 1642-1654, 2017.[link](http://id.nii.ac.jp/1001/00183719/)
-    - Hiroyuki Manabe, Wataru Yamada, Hiroshi Inamura, "Tag System with Low-powered Tag and Depth Sensing Camera," Proc. Symp. User Interface Software and Technology (UIST '14), pp. 373-382, 2014.[link](https://doi.org/10.1145/2642918.2647404)
+    - <span class="mnb">真鍋 宏幸</span>, 山田 渉, 稲村 浩, "ToF方式のデプスカメラで読み取る小型で低消費電力なタグ," 情報処理学会論文誌, Vol. 58, No. 10, pp. 1642-1654, 2017.[link](http://id.nii.ac.jp/1001/00183719/)
+    - <span class="mnb">Hiroyuki Manabe</span>, Wataru Yamada, Hiroshi Inamura, "Tag System with Low-powered Tag and Depth Sensing Camera," Proc. Symp. User Interface Software and Technology (UIST '14), pp. 373-382, 2014.[link](https://doi.org/10.1145/2642918.2647404)
 
   </ProfileResearch>
 
@@ -152,9 +152,9 @@ import HeadphoneEOG from "../../assets/profile/HeadphoneEOG.jpg";
   <ProfileResearch imgSrc={HeadphoneEOG.src}>
     ### ヘッドホン型視線入力デバイス / Headphone-type gaze input interface
 
-    - 真鍋 宏幸, 福本 雅朗, "ヘッドホンを用いたEOG法による視線入力インタフェース," 情報処理学会論文誌, Vol. 52, No. 4, pp. 1515-1526, 2011. [link](http://id.nii.ac.jp/1001/00073914/)
-    - Hiroyuki Manabe, Masaaki Fukumoto, Tohru Yagi, "Conductive Rubber Electrodes for Earphone-based Eye Gesture Input Interface," Proc. Symp. Wearable Computers (ISWC '13), pp. 33-40, 2013. [link](https://doi.org/10.1145/2493988.2494329)
-    - Hiroyuki Manabe, Masaaki Fukumoto, "Full-time Wearable Headphone-type Gaze Detector," Extended Abstracts Human Factors in Computing Systems (CHI '06), pp. 1073-1078, 2006. [link](https://doi.org/10.1145/1125451.1125655)
+    - <span class="mnb">真鍋 宏幸</span>, 福本 雅朗, "ヘッドホンを用いたEOG法による視線入力インタフェース," 情報処理学会論文誌, Vol. 52, No. 4, pp. 1515-1526, 2011. [link](http://id.nii.ac.jp/1001/00073914/)
+    - <span class="mnb">Hiroyuki Manabe</span>, Masaaki Fukumoto, Tohru Yagi, "Conductive Rubber Electrodes for Earphone-based Eye Gesture Input Interface," Proc. Symp. Wearable Computers (ISWC '13), pp. 33-40, 2013. [link](https://doi.org/10.1145/2493988.2494329)
+    - <span class="mnb">Hiroyuki Manabe</span>, Masaaki Fukumoto, "Full-time Wearable Headphone-type Gaze Detector," Extended Abstracts Human Factors in Computing Systems (CHI '06), pp. 1073-1078, 2006. [link](https://doi.org/10.1145/1125451.1125655)
 
   </ProfileResearch>
 
@@ -163,8 +163,8 @@ import MimeSpeech from "../../assets/profile/MimeSpeech.jpg";
   <ProfileResearch imgSrc={MimeSpeech.src}>
     ### 無発声音声認識 / Recognition of unvoiced speech
 
-    - 真鍋 宏幸, 平岩 明, 杉村 利明, "無発声音声認識 : 筋電信号を用いた声を伴わない日本語5母音の認識," 電子情報通信学会論文誌 D-II, Vol. 88, No. 9, pp. 1909-1917, 2005. [link](https://ci.nii.ac.jp/naid/110003224145)
-    - Hiroyuki Manabe, Akira Hiraiwa, Toshiaki Sugimura, "Unvoiced Speech Recognition Using EMG - Mime Speech Recognition," Extended Abstracts Human Factors in Computing Systems (CHI '03), pp. 794-795, 2003. [link](https://doi.org/10.1145/765891.765996)
+    - <span class="mnb">真鍋 宏幸</span>, 平岩 明, 杉村 利明, "無発声音声認識 : 筋電信号を用いた声を伴わない日本語5母音の認識," 電子情報通信学会論文誌 D-II, Vol. 88, No. 9, pp. 1909-1917, 2005. [link](https://ci.nii.ac.jp/naid/110003224145)
+    - <span class="mnb">Hiroyuki Manabe</span>, Akira Hiraiwa, Toshiaki Sugimura, "Unvoiced Speech Recognition Using EMG - Mime Speech Recognition," Extended Abstracts Human Factors in Computing Systems (CHI '03), pp. 794-795, 2003. [link](https://doi.org/10.1145/765891.765996)
 
   </ProfileResearch>
 </ProfileSection>
