--- a/src/pages/result.mdx
+++ b/src/pages/result.mdx
@@ -4,7 +4,7 @@ path: /result
 title: 研究成果
 ---
 
-(教員の過去を含めた成果は[こちら](http://pai.ise.shibaura-it.ac.jp/publications.html))
+(教員の過去を含めた成果は[こちら](https://pai.eng.shibaura-it.ac.jp/profile/publication/))
 
 ---
 
