--- a/src/pages/study.mdx
+++ b/src/pages/study.mdx
@@ -103,7 +103,7 @@ import BackhandDisplayImage from "../assets/study/backhand_display.webp";
 
 ---
 
-## Dプリンタを用いた電子回路作成手法
+## 3Dプリンタを用いた電子回路作成手法
 
 _今井， 2019_
 
