--- a/src/pages/study.mdx
+++ b/src/pages/study.mdx
@@ -6,7 +6,7 @@ title: 研究内容
 
 import { Image } from "astro:assets";
 
-## 3Dプリンタと転写箔を用いた多層基板の製作手法
+## 3Dプリンタと転写箔を用いた多層基板の製作手法!
 
 ### Single-sided Multi-layer Electric Circuit by Hot Stamping with 3D Printer
 
