study.mdxを更新 by鈴木 2022UIST
study.mdxを更新
導電転写箔とはんだごてを用いた部品実装手法　の内容を追加

--- a/src/pages/study.mdx
+++ b/src/pages/study.mdx
@@ -6,7 +6,33 @@ title: 研究内容
 
 import { Image } from "astro:assets";
 
-## 3Dプリンタと転写箔を用いた多層基板の製作手法!
+
+## 導電転写箔とはんだごてを用いた部品実装手法
+
+### A bonding technique for electric circuit prototyping using conductive transfer foil and soldering iron
+
+_鈴木， 2022_
+
+導電転写箔による配線を部品実装に応用した研究です．導電転写箔の配線は銀粒子と熱可塑性樹脂で構成されています．この熱可塑性樹脂は加熱すると溶けて接着剤として作用します．この性質を応用し、配線の上に電子部品を配置し，その電極をはんだごてで温めることで，電子部品と配線との接着と導通を実現することに成功しました．
+
+>Suzuki Tomohito,Imai Yuhei, Manabe Hiroyuki,  "A bonding technique for electric circuit prototyping using conductive transfer foil and soldering iron" Adjunct Proc. UIST ‘22.
+>[https://dl.acm.org/doi/abs/10.1145/3526114.3558670](https://dl.acm.org/doi/abs/10.1145/3526114.3558670)
+
+<iframe 
+ src="https://www.youtube.com/embed/MDfAqA-klGw?si=p2UsmMdBB_-g5INL"
+ title="YouTube video player" 
+ frameborder="0" 
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+ referrerpolicy="strict-origin-when-cross-origin" 
+ allowfullscreen="" 
+ style="width: 90%; margin: 0 auto; aspect-ratio: 16/9;">
+</iframe>
+
+---
+
+
+
+## 3Dプリンタと転写箔を用いた多層基板の製作手法
 
 ### Single-sided Multi-layer Electric Circuit by Hot Stamping with 3D Printer
 
