--- a/src/pages/result.mdx
+++ b/src/pages/result.mdx
@@ -12,11 +12,18 @@ title: 研究成果
 
 ### 国際会議
 
-- Eiichiro Sakurai, Hiroyuki Manabe, “[Flushner: A 3D Printing Technique That Inserts Stepped Objects to Achieve Surface Uniformity and High Speed](https://dl.acm.org/doi/10.1145/3613905.3648653),” In Extended Abstracts of the 2024 CHI Conference on Human Factors in Computing Systems (CHI EA ’24), Article No. 404, pp. 1-5, 2024.
-- Kazuhiro Takeda, Hiroyuki Manabe, “[Screen Augmentation Technique Using AR Glasses and Smartphone without External Sensors](https://dl.acm.org/doi/10.1145/3613905.3648664),” In Extended Abstracts of the 2024 CHI Conference on Human Factors in Computing Systems (CHI EA ’24), Article No. 416, pp. 1-5, 2024.
+- Naoki Yoshioka, Hiroyuki Manabe, "[SealingLid: FDM 3D Printing Technique that Bends Thin Walls to Work as a Lid](https://doi.org/10.1145/3672539.3686775)," Adjunct Proc. Symp. User Interface Software and Technology (UIST '24), pp. 1-3, 2024. (demo paper)
+- Ryoto Nohara, Hironori Ishikawa, Hiroyuki Manabe, "[Hybrid Input Technique for VR Combining Head Mounted Keyboard with Head Pointing](https://doi.org/10.1145/3641825.3689532)," Proc. the 30th ACM Symposium on Virtual Reality Software and Technology (VRST '24), pp. 1-2, 2024. (demo paper)
+- Tsubasa Otaki, Hiroyuki Manabe, "[A Nail-tip Device for Gesture and Force Input](https://doi.org/10.1145/3677386.3688894)," Proc. the 2024 ACM Symposium on Spatial User Interaction (SUI '24), pp. 1-2, 2024. (poster paper)
+- Leo Shimoda, Hiroyuki Manabe, "[FreelForce: Reel-type Force Feedback Device with HMD for Smooth and Quick Transitions](https://doi.org/10.1145/3677386.3688873)," Proc. the 2024 ACM Symposium on Spatial User Interaction (SUI '24), pp. 1-2, 2024. (demo paper)
+- Naoki Kunieda, Hiroyuki Manabe, "[OSIRITap: Whole-Body Interface that Recognizes Tap Input Using Only an HMD and Wrist-Mounted IMUs](https://doi.org/10.1145/3677386.3688871)," Proc. the 2024 ACM Symposium on Spatial User Interaction (SUI '24), pp. 1-2, 2024. (demo paper)
+- Eiichiro Sakurai, Hiroyuki Manabe, “[Flushner: A 3D Printing Technique That Inserts Stepped Objects to Achieve Surface Uniformity and High Speed](https://doi.org/10.1145/3613905.3648653),” In Extended Abstracts of the 2024 CHI Conference on Human Factors in Computing Systems (CHI EA ’24), pp. 1-5, 2024. (demo paper)
+- Kazuhiro Takeda, Hiroyuki Manabe, “[Screen Augmentation Technique Using AR Glasses and Smartphone without External Sensors](https://doi.org/10.1145/3613905.3648664),” In Extended Abstracts of the 2024 CHI Conference on Human Factors in Computing Systems (CHI EA ’24), pp. 1-5, 2024. (demo paper)
 
 ### 国内会議
 
+- 野原 僚人, 石川 博規, 真鍋 宏幸, "[HMKと仮想キーボードを組み合わせたハイブリッドな文字入力手法](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=234461&item_no=1&page_id=13&block_id=8)," 情報処理学会研究会報告 HCI208, 2024.
+- 國枝 直希, 真鍋 宏幸, "[MR環境下における身体背面部へのタップ入力を用いた入力領域拡張](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=234460&item_no=1&page_id=13&block_id=8)," 情報処理学会研究会報告 HCI208, 2024.
 ---
 
 ## 2023年度
