--- a/src/pages/result.mdx
+++ b/src/pages/result.mdx
@@ -22,8 +22,8 @@ title: 研究成果
 
 ### 国内会議
 
-- 野原 僚人, 石川 博規, 真鍋 宏幸, "[HMKと仮想キーボードを組み合わせたハイブリッドな文字入力手法](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=234461&item_no=1&page_id=13&block_id=8)," 情報処理学会研究会報告 HCI208, 2024.
-- 國枝 直希, 真鍋 宏幸, "[MR環境下における身体背面部へのタップ入力を用いた入力領域拡張](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=234460&item_no=1&page_id=13&block_id=8)," 情報処理学会研究会報告 HCI208, 2024.
+- 野原 僚人, 石川 博規, 真鍋 宏幸, "[HMKと仮想キーボードを組み合わせたハイブリッドな文字入力手法](http://id.nii.ac.jp/1001/00234341/)," 情報処理学会研究会報告 HCI208, 2024.
+- 國枝 直希, 真鍋 宏幸, "[MR環境下における身体背面部へのタップ入力を用いた入力領域拡張](http://id.nii.ac.jp/1001/00234340/)," 情報処理学会研究会報告 HCI208, 2024.
 ---
 
 ## 2023年度
