研究内容の更新

--- a/src/pages/study.mdx
+++ b/src/pages/study.mdx
@@ -7,6 +7,86 @@ title: 研究内容
 import { Image } from "astro:assets";
 
 
+## FDM方式3Dプリンタを用いた全自動フィラメント削減手法
+
+### SealingLid: FDM 3D Printing Technique that Bends Thin Walls to Work as a Lid
+
+_𠮷岡，2024_
+
+3Dプリンタの普及により，ユーザは手軽に3Dオブジェクトを作成できるようになりました．
+しかし，3Dプリンターには印刷に長時間がかかることや，多くの材料を無駄にしてしまうという問題があります．
+この問題を解決するために「SealingLid」を提案します．
+「SealingLid」は，薄い壁を印刷し，プリンタのノズルヘッドでその壁を倒すことで蓋を形成する手法です．
+これにより，中空構造やオーバーハング構造を作成可能です．
+サポート材やインフィルといった部分を印刷しないことで，フィラメント使用量が減少し，従来よりも早く印刷ができます．
+
+>Naoki Yoshioka, Hiroyuki Manabe, "SealingLid: FDM 3D Printing Technique that Bends Thin Walls to Work as a Lid," Adjunct Proc.UIST'24,pp.1-3,2024.
+>[https://doi.org/10.1145/3672539.3686775](https://doi.org/10.1145/3672539.3686775)
+
+<iframe 
+ src="https://www.youtube.com/embed/3vCujtIoxYM?si=i0LhQmPGGOA6yl_V"
+ title="YouTube video player" 
+ frameborder="0" 
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+ referrerpolicy="strict-origin-when-cross-origin" 
+ allowfullscreen="" 
+ style="width: 90%; margin: 0 auto; aspect-ratio: 16/9;">
+</iframe>
+
+---
+
+## ジェスチャ入力と力による入力が可能なネイル装着型デバイス
+
+### A Nail-tip Device for Gesture and Force Input
+
+_大瀧，2024_
+
+マイクロジェスチャは，小さな動きで他者に気づかれずに入力できる点で注目されています．
+先行研究では，指先が覆われるタイプのデバイスや力を検知するデバイスなどが提案されていましたが，指先を使う日常の動作に支障をもたらしたり，意図しない入力（ミダスタッチ）が発生しやすい問題があります．
+そこで本研究では，指先のタッチと力の強弱を組み合わせたジェスチャ入力と力による連続入力が行えるネイル型のデバイスを提案します．
+爪の先端のみに装着するので，他の作業時もデバイスを装着したまま使用できます．
+ジェスチャ入力の識別精度とデバイス装着時のミダスタッチの発生する動作を調査し，さらに提案デバイスを用いたアプリケーションを複数提示しました．
+
+>Tsubasa Otaki, Hiroyuki Manabe, “A Nail-tip Device for Gesture and Force Input,” Proc. SUI ‘24, pp. 1-2, 2024.
+>[https://doi.org/10.1145/3677386.3688894](https://doi.org/10.1145/3677386.3688894)
+
+<iframe 
+ src="https://www.youtube.com/embed/8mqHnas86mM?si=BkWKfsuCy4isyeVo"
+ title="YouTube video player" 
+ frameborder="0" 
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+ referrerpolicy="strict-origin-when-cross-origin" 
+ allowfullscreen="" 
+ style="width: 90%; margin: 0 auto; aspect-ratio: 16/9;">
+</iframe>
+---
+
+## ARグラスとスマートフォンを用いた画面拡張手法
+
+### Screen Augmentation Technique using AR Glasses and Smartphone without External Sensors
+
+_武田，2024_
+
+拡張現実（AR）を用いて，スマートフォンの映像を拡張することによって，映像への没入感や作業効率を高めることができます．
+既存研究では，デバイスのトラッキングのために，外部センサやQRコードを用いる必要がありました．
+そこで，外部センサを使用せず，頭部装着型のARグラスとスマートフォンのみを使用して画面拡張する手法を提案します．
+これは，ARグラスのハンドトラッキング機能を利用しており，簡単にスマートフォンのトラッキングを行うことができます．
+そして，スマートフォンへのタップ入力や3次元空間で自由に移動させることもできます．
+
+>Kazuhiro Takeda, Hiroyuki Manabe, “Screen Augmentation Technique Using AR Glasses and Smartphone without External Sensors,” In CHI EA ’24, pp. 1-5, 2024. 
+>[https://doi.org/10.1145/3613905.3648664](https://doi.org/10.1145/3613905.3648664)
+
+<iframe 
+ src="https://www.youtube.com/embed/_nydUO1Adt8?si=O1b8kVuW3oRdn0tw"
+ title="YouTube video player" 
+ frameborder="0" 
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+ referrerpolicy="strict-origin-when-cross-origin" 
+ allowfullscreen="" 
+ style="width: 90%; margin: 0 auto; aspect-ratio: 16/9;">
+</iframe>
+---
+
 ## 導電転写箔とはんだごてを用いた部品実装手法
 
 ### A bonding technique for electric circuit prototyping using conductive transfer foil and soldering iron
