--- a/src/pages/result.mdx
+++ b/src/pages/result.mdx
@@ -31,23 +31,23 @@ title: 研究成果
 ### 国際会議
 
 - Tatsuya Kawasaki, Hiroyuki Manabe, “[LensTouch: Touch Input on Lens Surfaces of Smart Glasses](https://doi.org/10.1145/3586182.3615792),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’23), Article No. 56, pp. 1-3, 2023. (demo paper)
-- Ryoto Nohara, Hironori Ishikawa, Hiroyuki Manabe, “[Positions of Wearable Keyboard in VR Environment](https://doi.org/10.1145/3607822.3618026),” Proc. 2023 ACM Symposium on Spatial User Interaction (SUI ’23), Article No. 38, pp. 1-3, 2023. (poster paper)SUI 2023 Best Poster Honorable Mention Award
-- Kouga Abe, Hironori Ishikawa, Hiroyuki Manabe, “[A Hybrid Method Using Gaze and Controller for Targeting Tiny Targets in VR While Lying down](https://link.springer.com/chapter/10.1007/978-3-031-36004-6_19),” HCI International 2023 Posters, pp. 139-146, 2023.
-- Eldiaz Salman Koeshandika, Hironori Ishikawa, Hiroyuki Manabe, “[Effects of Different Postures on User Experience in Virtual Reality](https://link.springer.com/chapter/10.1007/978-3-031-36004-6_30),” HCI International 2023 Posters, pp. 219-226, 2023.
-- Akari Kanei, Hiroyuki Manabe, “[Exergame to Promote Exercise Outside Physical Education Classes During a Pandemic](https://link.springer.com/chapter/10.1007/978-3-031-35998-9_36),” HCI International 2023 Posters, pp. 259-266, 2023.
+- Ryoto Nohara, Hironori Ishikawa, Hiroyuki Manabe, “[Positions of Wearable Keyboard in VR Environment](https://doi.org/10.1145/3607822.3618026),” Proc. 2023 ACM Symposium on Spatial User Interaction (SUI ’23), Article No. 38, pp. 1-3, 2023. (poster paper)SUI 2023 <span style="color: red;">**Best Poster Honorable Mention Award**</span>
+- Kouga Abe, Hironori Ishikawa, Hiroyuki Manabe, “[A Hybrid Method Using Gaze and Controller for Targeting Tiny Targets in VR While Lying down](https://doi.org/10.1007/978-3-031-36004-6_19),” HCI International 2023 Posters, pp. 139-146, 2023.
+- Eldiaz Salman Koeshandika, Hironori Ishikawa, Hiroyuki Manabe, “[Effects of Different Postures on User Experience in Virtual Reality](https://doi.org/10.1007/978-3-031-36004-6_30),” HCI International 2023 Posters, pp. 219-226, 2023.
+- Akari Kanei, Hiroyuki Manabe, “[Exergame to Promote Exercise Outside Physical Education Classes During a Pandemic](https://doi.org/10.1007/978-3-031-35998-9_36),” HCI International 2023 Posters, pp. 259-266, 2023.
 
 ### 国内会議
 
-- 阿部 広河, 石川 博規, 真鍋 宏幸, “VRGazeWarp: VRHMDに搭載されたアイトラッカーとVRコントローラを組み合わせたポインティング手法,” インタラクション2024論文集, 2024.
-- 下田 玲央, 真鍋 宏幸, “FreelForce: 任意のタイミングで使用可能な非接地型力覚提示デバイス,” インタラクション2024論文集, 2024.
-- 國枝 直希, 真鍋 宏幸, “VR環境下における身体背面部へのタップ操作による入力領域拡張,” インタラクション2024論文集, 2024.
-- 武田 和大, 真鍋 宏幸, “SMART MOVIE: ARグラスとスマホを併用した任意の場所で大画面かつ見やすい映像を視聴するシステム,” インタラクション2024論文集, 2024.
-- 兼井 あかり, 真鍋 宏幸 “[エクサゲームにおける身体動作を用いたユーザの入力タイミング](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=231624&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI206, 2024.
-- 楊 瑞明, 真鍋 宏幸, “[VRと現実環境における英単語暗記学習への姿勢の影響](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=231607&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI206, 2024.
-- 野原 僚人, 石川 博規, 真鍋 宏幸, “[ウェアラブルキーボードのホームポジションへと指を誘導するためのキーキャップの改良](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=231614&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI206, 2024.
+- 阿部 広河, 石川 博規, 真鍋 宏幸, “[VRGazeWarp: VRHMDに搭載されたアイトラッカーとVRコントローラを組み合わせたポインティング手法](https://www.interaction-ipsj.org/proceedings/2024/data/pdf/2P-101.pdf),” インタラクション2024論文集, 2024.
+- 下田 玲央, 真鍋 宏幸, “[FreelForce: 任意のタイミングで使用可能な非接地型力覚提示デバイス](https://www.interaction-ipsj.org/proceedings/2024/data/pdf/1B-47.pdf),” インタラクション2024論文集, 2024.
+- 國枝 直希, 真鍋 宏幸, “[VR環境下における身体背面部へのタップ操作による入力領域拡張](https://www.interaction-ipsj.org/proceedings/2024/data/pdf/1B-45.pdf),” インタラクション2024論文集, 2024.
+- 武田 和大, 真鍋 宏幸, “[SMART MOVIE: ARグラスとスマホを併用した任意の場所で大画面かつ見やすい映像を視聴するシステム](https://www.interaction-ipsj.org/proceedings/2024/data/pdf/1B-30.pdf),” インタラクション2024論文集, 2024.
+- 兼井 あかり, 真鍋 宏幸 “[エクサゲームにおける身体動作を用いたユーザの入力タイミング](http://id.nii.ac.jp/1001/00231514/),” 情報処理学会研究会報告 HCI206, 2024.
+- 楊 瑞明, 真鍋 宏幸, “[VRと現実環境における英単語暗記学習への姿勢の影響](http://id.nii.ac.jp/1001/00231497/),” 情報処理学会研究会報告 HCI206, 2024.
+- 野原 僚人, 石川 博規, 真鍋 宏幸, “[ウェアラブルキーボードのホームポジションへと指を誘導するためのキーキャップの改良](http://id.nii.ac.jp/1001/00231504/),” 情報処理学会研究会報告 HCI206, 2024.
 - 川崎 竜也, 真鍋 宏幸, “[LensTouch: スマートグラスのレンズ面を使った入力手法](https://www.wiss.org/WISS2023Proceedings/data/21.pdf),” WISS2023, 21, 2023
-- 田中 智泰, 真鍋 宏幸, “[すまうす: スマートフォンをまとったマウス](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=227506&item_no=1&page_id=13&block_id=8),” エンタテインメントコンピューティングシンポジウム2023論文集, 2023.
-- 野原 僚人, 石川 博規, 真鍋 宏幸, “[身体の様々な部位に装着した分割キーボードを用いたVR環境下での文字入力](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=227186&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI204, 2023.
+- 田中 智泰, 真鍋 宏幸, “[すまうす: スマートフォンをまとったマウス](http://id.nii.ac.jp/1001/00227397/),” エンタテインメントコンピューティングシンポジウム2023論文集, 2023.
+- 野原 僚人, 石川 博規, 真鍋 宏幸, “[身体の様々な部位に装着した分割キーボードを用いたVR環境下での文字入力](http://id.nii.ac.jp/1001/00227077/),” 情報処理学会研究会報告 HCI204, 2023.
 
 ---
 
@@ -55,19 +55,19 @@ title: 研究成果
 
 ### 国際会議
 
-- Tantiworachot Chaiyapat, Manabe Hiroyuki, “[Summer Skybox: A Device Representing the Sky for Personalized Day Cycle](https://dl.acm.org/doi/10.1145/3532525.3532532),” _13th Augmented Human International Conference_ (AH2022), pp. 1-4, 2022.(Short paper) Best Short Paper award
-- Suzuki Tomohito, Imai Yuhei, ManabeHiroyuki, “[A bonding technique for electric circuit prototyping using conductive transfer foil and soldering iron](https://dl.acm.org/doi/10.1145/3526114.3558670),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’22 Adjunct), pp. 1-3, 2022, (demo paper)
-- Takumi Suzuki, Hiroyuki Manabe, “[Estimation of Brush Type Passive Stylus Angles Using Capacitive Image](https://dl.acm.org/doi/pdf/10.1145/3569009.3573112),” Proc. International Conference on Tangible, Embedded and Embodied Interaction (TEI ’23), Article No. 42, pp. 1-6, 2023. (poster paper)
+- Tantiworachot Chaiyapat, Manabe Hiroyuki, “[Summer Skybox: A Device Representing the Sky for Personalized Day Cycle](https://doi.org/10.1145/3532525.3532532),” _13th Augmented Human International Conference_ (AH2022), pp. 1-4, 2022.(Short paper) <span style="color: red;">**Best Short Paper award**</span>
+- Suzuki Tomohito, Imai Yuhei, ManabeHiroyuki, “[A bonding technique for electric circuit prototyping using conductive transfer foil and soldering iron](https://doi.org/10.1145/3526114.3558670),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’22 Adjunct), pp. 1-3, 2022, (demo paper)
+- Takumi Suzuki, Hiroyuki Manabe, “[Estimation of Brush Type Passive Stylus Angles Using Capacitive Image](https://doi.org/10.1145/3569009.3573112),” Proc. International Conference on Tangible, Embedded and Embodied Interaction (TEI ’23), Article No. 42, pp. 1-6, 2023. (poster paper)
 
 ### 国内会議
 
-- 上島 芽久, 真鍋 宏幸, “[三人称視点で提示されたアバタに対する線を用いた身体化感覚生起手法](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=225017&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI202, 2023.
-- 阿部 広河, 石川 博規, 真鍋 宏幸, “アイトラッカー搭載VRHMDを寝ながら使用した場合の視線入力パフォーマンス,” インタラクション2023予稿集, 2P-73, pp. 784-787, 2023.
-- 辺見 優天, 真鍋 宏幸, “[3Dプリンタによるホットスタンプ多層回路における回路の最適化のための検討](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=223356&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI201, 2023.
-- 花田 晶彦, 真鍋 宏幸, “[ARグラスとスマートフォンを併用した映像拡張手法における基礎検討](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=223345&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI201, 2023.
-- 上田 裕貴, 真鍋 宏幸, “[ARグラスを用いた実世界への視線誘導と注意力への影響](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=223330&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI201, 2023.
-- 鈴木 拓海, 真鍋 宏幸, “[静電容量画像を用いた筆型パッシブスタイラスの角度推定](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=223324&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI201, 2023. HCI研究会 学生奨励賞
-- 兼井 あかり, 真鍋 宏幸, [“パンデミック禍における大学体育のためのエクサゲーム](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=223316&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI201, 2023.
+- 上島 芽久, 真鍋 宏幸, “[三人称視点で提示されたアバタに対する線を用いた身体化感覚生起手法](http://id.nii.ac.jp/1001/00224908/),” 情報処理学会研究会報告 HCI202, 2023.
+- 阿部 広河, 石川 博規, 真鍋 宏幸, “[アイトラッカー搭載VRHMDを寝ながら使用した場合の視線入力パフォーマンス](https://www.interaction-ipsj.org/proceedings/2023/data/pdf/2P-73.pdf),” インタラクション2023予稿集, 2P-73, pp. 784-787, 2023.
+- 辺見 優天, 真鍋 宏幸, “[3Dプリンタによるホットスタンプ多層回路における回路の最適化のための検討](http://id.nii.ac.jp/1001/00223247/),” 情報処理学会研究会報告 HCI201, 2023.
+- 花田 晶彦, 真鍋 宏幸, “[ARグラスとスマートフォンを併用した映像拡張手法における基礎検討](http://id.nii.ac.jp/1001/00223236/),” 情報処理学会研究会報告 HCI201, 2023.
+- 上田 裕貴, 真鍋 宏幸, “[ARグラスを用いた実世界への視線誘導と注意力への影響](http://id.nii.ac.jp/1001/00223221/),” 情報処理学会研究会報告 HCI201, 2023.
+- 鈴木 拓海, 真鍋 宏幸, “[静電容量画像を用いた筆型パッシブスタイラスの角度推定](http://id.nii.ac.jp/1001/00223215/),” 情報処理学会研究会報告 HCI201, 2023. HCI研究会 <span style="color: red;">**学生奨励賞**</span>
+- 兼井 あかり, 真鍋 宏幸, [“パンデミック禍における大学体育のためのエクサゲーム](http://id.nii.ac.jp/1001/00223207/),” 情報処理学会研究会報告 HCI201, 2023.
 
 ---
 
@@ -79,17 +79,17 @@ title: 研究成果
 
 ### 国際会議
 
-- Yuhei Imai, Hiroyuki Manabe, “[Single-sided Multi-layer Electric Circuit by Hot Stamping with 3D Printer](https://dl.acm.org/doi/10.1145/3474349.3480200),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’21), pp. 126-128, 2021. (demo paper)
-- Wahyu Hutama, Hikari Harashima, Hironori Ishikawa, Hiroyuki Manabe, “[HMK: Head-Mounted-Keyboard for Text Inputin Virtual or Augmented Reality](https://dl.acm.org/doi/10.1145/3474349.3480195),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’21), pp. 115-117, 2021. (demo paper)
+- Yuhei Imai, Hiroyuki Manabe, “[Single-sided Multi-layer Electric Circuit by Hot Stamping with 3D Printer](https://doi.org/10.1145/3474349.3480200),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’21), pp. 126-128, 2021. (demo paper)
+- Wahyu Hutama, Hikari Harashima, Hironori Ishikawa, Hiroyuki Manabe, “[HMK: Head-Mounted-Keyboard for Text Inputin Virtual or Augmented Reality](https://doi.org/10.1145/3474349.3480195),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’21), pp. 115-117, 2021. (demo paper)
 
 ### 国内会議
 
-- 上田 裕貴, 山田 渉, 真鍋 宏幸, “[左右に異なるレンズを用いたHMDの視野角拡張](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=211373&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告　HCI193, 2021-HCI-193(13), pp. 1-5, 2020.
+- 上田 裕貴, 山田 渉, 真鍋 宏幸, “[左右に異なるレンズを用いたHMDの視野角拡張](http://id.nii.ac.jp/1001/00211267/),” 情報処理学会研究会報告　HCI193, 2021-HCI-193(13), pp. 1-5, 2020.
 - 兼井 あかり, 真鍋 宏幸, “オンライン体育授業のための対話しながら行うスポーツ,” WISS2021（予稿なしデモポスター発表）, 3-B07, 2021.
 - 今井 悠平, 真鍋 宏幸, “[3Dプリンタと2種類の転写箔を用いた片面実装多層基板の製作手法](https://www.wiss.org/WISS2021Proceedings/data/1-B02.pdf),” WISS2021予稿集, 1-B02, 2021.
-- 植田 健斗, 真鍋 宏幸, “方向提示を目的とした熱刺激を用いた首輪型デバイス,” インタラクション2022論文集, 2022.
-- 阿部 広河, 真鍋 宏幸, “VRコントローラを用いた寝ながら快適に文字入力が行える手法の提案,” インタラクション2022論文集, 2022.
-- Wahyu Hutama, 原島 輝, 石川 博規, 真鍋 宏幸, “[HMK: VR/ARテキスト入力用ヘッドマウントキーボード](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=217421&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告 HCI197, 2022.
+- 植田 健斗, 真鍋 宏幸, “[方向提示を目的とした熱刺激を用いた首輪型デバイス](https://www.interaction-ipsj.org/proceedings/2022/data/pdf/3D14.pdf),” インタラクション2022論文集, 2022.
+- 阿部 広河, 真鍋 宏幸, “[VRコントローラを用いた寝ながら快適に文字入力が行える手法の提案](https://www.interaction-ipsj.org/proceedings/2022/data/pdf/3P05.pdf),” インタラクション2022論文集, 2022.
+- Wahyu Hutama, 原島 輝, 石川 博規, 真鍋 宏幸, “[HMK: VR/ARテキスト入力用ヘッドマウントキーボード](http://id.nii.ac.jp/1001/00217313/),” 情報処理学会研究会報告 HCI197, 2022.
 
 ---
 
@@ -97,18 +97,18 @@ title: 研究成果
 
 ### ジャーナル
 
-- 藤田 和之, 黄 梦婷, 高嶋 和毅, 土田 太一, 真鍋 宏幸, 北村 喜文, “[ShearSheet：静電容量タッチパネルに装着可能な透明シートを用いた剪断入力インタフェース](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=209439&item_no=1&page_id=13&block_id=8),” 情報処理学会論文誌, Vol. 62, No. 2, pp. 641-653, 2021.
+- 藤田 和之, 黄 梦婷, 高嶋 和毅, 土田 太一, 真鍋 宏幸, 北村 喜文, “[ShearSheet：静電容量タッチパネルに装着可能な透明シートを用いた剪断入力インタフェース](http://doi.org/10.20729/00209337),” 情報処理学会論文誌, Vol. 62, No. 2, pp. 641-653, 2021.
 
 ### 国際会議
 
-- Hiroyuki Manabe, Yuki Iwai, “[Backhand Display: A Wearable Device for the Back of the Hand](https://dl.acm.org/doi/10.1145/3380867.3426200),” Companion Proc. Conf. on Interactive Surfaces and Spaces (ISS ’20), pp. 41-45, 2020. (poster)
+- Hiroyuki Manabe, Yuki Iwai, “[Backhand Display: A Wearable Device for the Back of the Hand](https://doi.org/10.1145/3380867.3426200),” Companion Proc. Conf. on Interactive Surfaces and Spaces (ISS ’20), pp. 41-45, 2020. (poster)
 
 ### 国内会議
 
 - 吉田 浩人, 真鍋 宏幸, “[静電容量タッチセンサを用いたタッチタイピング習得支援手法](https://www.interaction-ipsj.org/proceedings/2021/data/pdf/2Q06.pdf),” インタラクション2021論文集, pp. 722-725, 2021.
-- 田中 智泰, 山田 渉, 真鍋 宏幸, “[スマートフォンカメラとピンホールを用いた3次元入力の実装と評価,](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=208632&item_no=1&page_id=13&block_id=8)” 情報処理学会研究会報告　HCI190, 2020-HCI-190(18), pp. 1-5, 2020.
-- 今井 悠平, 真鍋 宏幸, “[3Dプリンタと転写箔を用いた片面実装多層基板の製作手法](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=208616&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告　HCI190, 2020-HCI-190(2), pp. 1-6, 2020.
-- 今井 悠平, 加藤 邦拓, 瀬川 典久, 真鍋 宏幸, “[3Dプリンタと転写箔を用いた両面基板の製作手法](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=204652&item_no=1&page_id=13&block_id=8),” 情報処理学会研究会報告　HCI190, 2020-HCI-188(13), pp. 1-7, 2020. HCI188 学生奨励賞
+- 田中 智泰, 山田 渉, 真鍋 宏幸, “[スマートフォンカメラとピンホールを用いた3次元入力の実装と評価,](http://id.nii.ac.jp/1001/00208530/)” 情報処理学会研究会報告　HCI190, 2020-HCI-190(18), pp. 1-5, 2020.
+- 今井 悠平, 真鍋 宏幸, “[3Dプリンタと転写箔を用いた片面実装多層基板の製作手法](http://id.nii.ac.jp/1001/00208514/),” 情報処理学会研究会報告　HCI190, 2020-HCI-190(2), pp. 1-6, 2020.
+- 今井 悠平, 加藤 邦拓, 瀬川 典久, 真鍋 宏幸, “[3Dプリンタと転写箔を用いた両面基板の製作手法](http://id.nii.ac.jp/1001/00204557/),” 情報処理学会研究会報告　HCI190, 2020-HCI-188(13), pp. 1-7, 2020. HCI188 <span style="color: red;">**学生奨励賞**</span>
 
 ---
 
@@ -118,10 +118,10 @@ title: 研究成果
 
 ### 国際会議
 
-- Mengting Huang, Kazuyuki Fujita, Kazuki Takashima, Taichi Tsuchida, Hiroyuki Manabe, Yoshifumi Kitamura, “[ShearSheet: Low-Cost Shear Force Input with Elastic Feedback for Augmenting Touch Interaction](https://dl.acm.org/doi/10.1145/3343055.3359717),” Proc. Int. Conf. Interactive Surfaces and Spaces (ISS ’19), pp. 77-87, 2019. (full paper)ISS 2019 Best Demo Award
-- Yuhei Imai, Kunihiro Kato, Norihisa Segawa, Hiroyuki Manabe, “[Hot Stamping of Electric Circuits by 3D Printer](https://dl.acm.org/doi/10.1145/3332167.3356895),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’19), pp. 128-130, 2019. (demo paper)
-- Norihisa Segawa, Kunihiro Kato, Hiroyuki Manabe, “[Rapid Prototyping of Paper Electronics Using a Metal Leaf and Laser Printer](https://dl.acm.org/doi/10.1145/3332167.3356885),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’19), pp. 99-101, 2019. (demo paper)
-- Yoshinari Takegawa, Kohei Matsumura, Hiroyuki Manabe, “[PokeRepo Go++: One-man Live Reporting System with a Commentator Function](https://dl.acm.org/doi/10.1145/3317697.3325126),” Proc. International Conference on Interactive Experiences for Television and Online Video (TVX ’19), pp. 230-238, 2019. (poster)
+- Mengting Huang, Kazuyuki Fujita, Kazuki Takashima, Taichi Tsuchida, Hiroyuki Manabe, Yoshifumi Kitamura, “[ShearSheet: Low-Cost Shear Force Input with Elastic Feedback for Augmenting Touch Interaction](https://doi.org/10.1145/3343055.3359717),” Proc. Int. Conf. Interactive Surfaces and Spaces (ISS ’19), pp. 77-87, 2019. (full paper)ISS 2019 <span style="color: red;">**Best Demo Award**</span>
+- Yuhei Imai, Kunihiro Kato, Norihisa Segawa, Hiroyuki Manabe, “[Hot Stamping of Electric Circuits by 3D Printer](https://doi.org/10.1145/3332167.3356895),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’19), pp. 128-130, 2019. (demo paper)
+- Norihisa Segawa, Kunihiro Kato, Hiroyuki Manabe, “[Rapid Prototyping of Paper Electronics Using a Metal Leaf and Laser Printer](https://doi.org/10.1145/3332167.3356885),” Adjunct Proc. Symp. User Interface Software and Technology (UIST ’19), pp. 99-101, 2019. (demo paper)
+- Yoshinari Takegawa, Kohei Matsumura, Hiroyuki Manabe, “[PokeRepo Go++: One-man Live Reporting System with a Commentator Function](https://doi.org/10.1145/3317697.3325126),” Proc. International Conference on Interactive Experiences for Television and Online Video (TVX ’19), pp. 230-238, 2019. (poster)
 
 ### 国内会議
 
