研究内容の更新

--- a/src/pages/study.mdx
+++ b/src/pages/study.mdx
@@ -7,6 +7,20 @@ title: 研究内容
 import { Image } from "astro:assets";
 
 
+## 真鍋研デモ動画集
+
+<iframe 
+ src="https://www.youtube.com/embed/videoseries?si=bcToXvLVkemhSkAf&amp;list=PLoAniYloTWAqNEKdmJJhB_9gBs5DFff9e"
+ title="真鍋研デモ動画集" 
+ frameborder="0" 
+ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+ referrerpolicy="strict-origin-when-cross-origin" 
+ allowfullscreen="" 
+ style="width: 90%; margin: 0 auto; aspect-ratio: 16/9;">
+</iframe>
+
+---
+
 ## FDM方式3Dプリンタを用いた全自動フィラメント削減手法
 
 ### SealingLid: FDM 3D Printing Technique that Bends Thin Walls to Work as a Lid
