ピーちゃんの論文ページへのリンクを変更

--- a/src/pages/result.mdx
+++ b/src/pages/result.mdx
@@ -12,7 +12,7 @@ title: 研究成果
 
 ### 国際会議
 
-- Naoki Yoshioka, Hiroyuki Manabe, "[SealingLid: FDM 3D Printing Technique that Bends Thin Walls to Work as a Lid](https://doi.org/10.1145/3672539.3686775)," Adjunct Proc. Symp. User Interface Software and Technology (UIST '24), pp. 1-3, 2024. (demo paper)
+- Naoki Yoshioka, Hiroyuki Manabe, "[SealingLid: FDM 3D Printing Technique that Bends Thin Walls to Work as a Lid](https://dl.acm.org/doi/10.1145/3672539.3686775?cid=81311482851)," Adjunct Proc. Symp. User Interface Software and Technology (UIST '24), pp. 1-3, 2024. (demo paper)
 - Ryoto Nohara, Hironori Ishikawa, Hiroyuki Manabe, "[Hybrid Input Technique for VR Combining Head Mounted Keyboard with Head Pointing](https://doi.org/10.1145/3641825.3689532)," Proc. the 30th ACM Symposium on Virtual Reality Software and Technology (VRST '24), pp. 1-2, 2024. (demo paper)
 - Tsubasa Otaki, Hiroyuki Manabe, "[A Nail-tip Device for Gesture and Force Input](https://doi.org/10.1145/3677386.3688894)," Proc. the 2024 ACM Symposium on Spatial User Interaction (SUI '24), pp. 1-2, 2024. (poster paper)
 - Leo Shimoda, Hiroyuki Manabe, "[FreelForce: Reel-type Force Feedback Device with HMD for Smooth and Quick Transitions](https://doi.org/10.1145/3677386.3688873)," Proc. the 2024 ACM Symposium on Spatial User Interaction (SUI '24), pp. 1-2, 2024. (demo paper)
