研究成果の更新

--- a/src/pages/result.mdx
+++ b/src/pages/result.mdx
@@ -10,6 +10,10 @@ title: 研究成果
 
 ## 2024年度
 
+### ジャーナル
+
+- 野原 僚人, ワーユ フタマ, 原島 輝, 石川 博規, 真鍋 宏幸, "[HMK：頭部装着型キーボードを用いた文字入力手法](https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=241759&item_no=1&page_id=13&block_id=8)," 情報処理学会論文誌, Vol. 65, No. 12, pp. 1788-1800, 2024.
+
 ### 国際会議
 
 - Naoki Yoshioka, Hiroyuki Manabe, "[SealingLid: FDM 3D Printing Technique that Bends Thin Walls to Work as a Lid](https://doi.org/10.1145/3672539.3686775)," Adjunct Proc. Symp. User Interface Software and Technology (UIST '24), pp. 1-3, 2024. (demo paper)
@@ -22,6 +26,9 @@ title: 研究成果
 
 ### 国内会議
 
+- 野原 僚人, 石川 博規, "[HMKとアイポインティングを組み合わせたマルチモーダルな入力手法](https://www.wiss.org/WISS2024Proceedings/data/demo//1-A10.pdf)," WISS2024予稿集, 1-A10, 2024.
+- 鈴木 智仁, 真鍋 宏幸, "[銀ナノインク・導電転写箔の配線に対する強固なはんだ付け部品実装手法](https://www.wiss.org/WISS2024Proceedings/data/demo//1-A11.pdf)," WISS2024予稿集, 1-A11, 2024.
+- 川崎 竜也, 真鍋 宏幸, "[LensTouch+: スマートグラスのレンズ面を使った入力手法の拡張](https://www.wiss.org/WISS2024Proceedings/data/demo//1-B11.pdf)," WISS2024予稿集, 1-B11, 2024.
 - 野原 僚人, 石川 博規, 真鍋 宏幸, "[HMKと仮想キーボードを組み合わせたハイブリッドな文字入力手法](http://id.nii.ac.jp/1001/00234341/)," 情報処理学会研究会報告 HCI208, 2024.
 - 國枝 直希, 真鍋 宏幸, "[MR環境下における身体背面部へのタップ入力を用いた入力領域拡張](http://id.nii.ac.jp/1001/00234340/)," 情報処理学会研究会報告 HCI208, 2024.
 ---
