--- a/src/content/reports/post-2024-12-11.mdx
+++ b/src/content/reports/post-2024-12-11.mdx
@@ -35,7 +35,8 @@ M2の鈴木です．新潟県の苗場プリンスホテルで 2024年12月11日
 </Grid>
 
 
-## 学会会場とその周辺の様子
+
+## おまけ
 学会中の食事について、さすが苗場プリンスホテルとあって、ご飯はとても美味しかったです．（画像は3日目の朝食）
 <Grid>
 <Image alt="img" src={Image5} />
