ウェアラブルEXPOの記事更新

--- a/src/content/reports/post-2025-01-30.mdx
+++ b/src/content/reports/post-2025-01-30.mdx
@@ -1,5 +1,5 @@
 ---
-title: "研究室忘年会を行いました"
+title: "ウェアラブルEXPOにて展示発表を行いました"
 description: "2025年1月22日～1月25日にかけて東京ビッグサイトにて開催されたウェアラブルEXPO2025に，M2の野原，川崎が展示発表を行いました。"
 pubDate: "2025-01-30T12:00:00.000Z"
 tags: ['学生報告', '研究成果']
