update-award-nohara

--- a/src/pages/result.mdx
+++ b/src/pages/result.mdx
@@ -29,7 +29,7 @@ title: 研究成果
 - 野原 僚人, 石川 博規, 真鍋 宏幸, "[HMKとアイポインティングを組み合わせたマルチモーダルな入力手法](https://www.wiss.org/WISS2024Proceedings/data/demo//1-A10.pdf)," WISS2024予稿集, 1-A10, 2024.
 - 鈴木 智仁, 真鍋 宏幸, "[銀ナノインク・導電転写箔の配線に対する強固なはんだ付け部品実装手法](https://www.wiss.org/WISS2024Proceedings/data/demo//1-A11.pdf)," WISS2024予稿集, 1-A11, 2024.
 - 川崎 竜也, 真鍋 宏幸, "[LensTouch+: スマートグラスのレンズ面を使った入力手法の拡張](https://www.wiss.org/WISS2024Proceedings/data/demo//1-B11.pdf)," WISS2024予稿集, 1-B11, 2024.
-- 野原 僚人, 石川 博規, 真鍋 宏幸, "[HMKと仮想キーボードを組み合わせたハイブリッドな文字入力手法](http://id.nii.ac.jp/1001/00234341/)," 情報処理学会研究会報告 HCI208, 2024.
+- 野原 僚人, 石川 博規, 真鍋 宏幸, "[HMKと仮想キーボードを組み合わせたハイブリッドな文字入力手法](http://id.nii.ac.jp/1001/00234341/)," 情報処理学会研究会報告 HCI208, 2024, HCI208 <span style="color: red;">**学生奨励賞**</span>.
 - 國枝 直希, 真鍋 宏幸, "[MR環境下における身体背面部へのタップ入力を用いた入力領域拡張](http://id.nii.ac.jp/1001/00234340/)," 情報処理学会研究会報告 HCI208, 2024.
 ---
 
