卒業式と送別会の記事の内容を更新

--- a/src/content/reports/post-2025-04-11.mdx
+++ b/src/content/reports/post-2025-04-11.mdx
@@ -24,7 +24,7 @@ import Image2 from './images/post-2025-04-11/2.jpg';
 
 その日の夜には，卒業生の送別会が行われました．
 それぞれが，これまでの研究室での生活を振り返ったり，これからのことを語り合ったりしていました．
-最後にみんなでお酒を交えることができて楽しかったです．
+最後にみんなで盃を交わすことができて嬉しかったです．
 
 <Grid>
 <Image alt="img" src={Image2} />
